# encode-toolkit

./: .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  CHANGELOG.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  PRIVACY.md  README.md  SECURITY.md  conftest.py  glama.json  index.js  package.json  pyproject.toml  server.json  smithery.yaml
.claude/: settings.json
.claude-plugin/: marketplace.json  plugin.json
.cursor-plugin/: marketplace.json  plugin.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: clone-count.yml  draft-pdf.yml  lint.yml  release.yml  test.yml  validate.yml
agents/: cutandrun-pipeline.md  hic-pipeline.md  rnaseq-pipeline.md  wgbs-pipeline.md
commands/: browse-files.md  cite-encode.md  compare-experiments.md  log-provenance.md  track-experiments.md
docs/: SHOWCASE.md  api-reference.md  integrations.md  security.md  submission-examples.md  walkthrough.md
docs/skill-vignettes/: accessibility-aggregation.md  batch-analysis.md  cellxgene-context.md  cite-encode.md  clinvar-annotation.md  compare-biosamples.md  cross-reference.md  data-provenance.md  disease-research.md  download-encode.md  ensembl-annotation.md  epigenome-profiling.md  geo-connector.md  gnomad-variants.md  gtex-expression.md  gwas-catalog.md  hic-aggregation.md  histone-aggregation.md  integrative-analysis.md  jaspar-motifs.md  methylation-aggregation.md  motif-analysis.md  multi-omics-integration.md  peak-annotation.md  pipeline-atacseq.md  pipeline-chipseq.md  pipeline-cutandrun.md  pipeline-dnaseseq.md  pipeline-guide.md  pipeline-hic.md  pipeline-rnaseq.md  pipeline-wgbs.md  publication-trust.md  quality-assessment.md  regulatory-elements.md  scrna-meta-analysis.md  search-encode.md  (+6 more)
joss/: paper.bib  paper.md
plugin/: .mcp.json
rules/: encode-api-patterns.mdc  encode-data-quality.mdc  encode-file-formats.mdc  encode-provenance.mdc
tests/: test_auth.py  test_bioinformatics_audit.py  test_client.py  test_downloader.py  test_models.py  test_server.py  test_tool_responses.py  test_tracker.py  test_validation.py
(+226 files in other folders)
