[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "encode-toolkit"
version = "0.3.0b7"
description = "MCP server for querying and downloading ENCODE Project genomics data directly from Claude"
readme = "README.md"
license = "CC-BY-NC-ND-4.0"
requires-python = ">=3.10"
authors = [
    { name = "Dr. Alex M. Mawla, PhD", email = "ammawla@ucdavis.edu" },
]
keywords = [
    "encode",
    "genomics",
    "bioinformatics",
    "mcp",
    "claude",
    "chip-seq",
    "atac-seq",
    "rna-seq",
    "epigenomics",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Scientific/Engineering :: Bio-Informatics",
]
dependencies = [
    "httpx>=0.27",
    "mcp[cli]>=1.0",
    "pydantic>=2.0",
    "keyring>=25.0",
    "cryptography>=42.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.23",
    "pytest-cov>=5.0",
    "ruff>=0.5.0",
]

[project.scripts]
encode-toolkit = "encode_connector.server.main:main"

[project.urls]
Homepage = "https://github.com/ammawla/encode-toolkit"
Repository = "https://github.com/ammawla/encode-toolkit"
Issues = "https://github.com/ammawla/encode-toolkit/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/encode_connector"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: mark test as integration test (deselect with '-m \"not integration\"')",
]

[tool.coverage.run]
source = ["encode_connector"]
omit = ["tests/*"]

[tool.coverage.report]
show_missing = true
fail_under = 70

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W", "UP"]
ignore = ["E501"]

[tool.ruff.format]
quote-style = "double"
